--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ retrofit = "2.11.0"
 gson = "2.13.1"
 okhttp = "5.1.0"
 chucker = "4.2.0"
+screenshotsendersdk = "1.0.0"
 
 
 [libraries]
@@ -40,6 +41,7 @@ okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhtt
 okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 chucker-debug = { module = "com.github.chuckerteam.chucker:library", version.ref = "chucker" }
 chucker-release = { module = "com.github.chuckerteam.chucker:library-no-op", version.ref = "chucker" }
+screenshotsendersdk = { module = "com.github.arpit-cd:ScreenShotSenderSDK", version.ref = "screenshotsendersdk" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
