docs: Update README and dependency coordinates
This commit updates the README.md file and the ScreenShotSenderSDK dependency coordinates.

Key changes:
- Updated the JitPack badge URL and the dependency implementation string in `README.md` and `gradle/libs.versions.toml` from `arpit-cd/ScreenShotSenderSDK` to `cdcountrydelight/ScreenShotSenderSDK`.
- Updated the GitHub issues link in `README.md` to point to the new repository location.
- Added a new "Important: Async Image Loading Configuration" section to `README.md`.
    - This section explains the necessity of disabling hardware acceleration for bitmaps when using async image loading libraries like Coil to ensure proper screenshot capture.
    - Provides a Kotlin code example demonstrating how to configure Coil with `bitmapConfig(Bitmap.Config.ARGB_8888)` and `allowHardware(false)`.
    - Includes a note on conditionally disabling hardware acceleration using `ScreenShotSenderSDK.isSDKRunning()`.
- Minor formatting changes (indentation) in the code blocks within `README.md`.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,7 +41,7 @@ okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhtt
 okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 chucker-debug = { module = "com.github.chuckerteam.chucker:library", version.ref = "chucker" }
 chucker-release = { module = "com.github.chuckerteam.chucker:library-no-op", version.ref = "chucker" }
-screenshotsendersdk = { module = "com.github.arpit-cd:ScreenShotSenderSDK", version.ref = "screenshotsendersdk" }
+screenshotsendersdk = { module = "com.github.cdcountrydelight:ScreenShotSenderSDK", version.ref = "screenshotsendersdk" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
